--- a/test/css/test.css
+++ b/test/css/test.css
@@ -1482,9 +1482,10 @@
   box-sizing: content-box;
 }
 
+/*  - [function] get-bleed (3 Assertions, 3 Passed, 0 Failed) */
 /*  
-    0 Tests:
-    - 0 Passed
+    1 Tests:
+    - 1 Passed
     - 0 Failed */
 /*  
 
