--- a/test/scss/language/susy/_bleed.scss
+++ b/test/scss/language/susy/_bleed.scss
@@ -5,6 +5,7 @@
 
   // bleed [mixin]
   // -------------
+
   @include output-test('bleed') {
 
     // simple
@@ -130,5 +131,54 @@
         @include susy-box-sizing(content-box);
       }
     }
+  }
+
+  // get-bleed [function]
+  // --------------------
+
+  @include test('[function] get-bleed') {
+    $test: get-bleed(0 1 1em of 7 .5);
+    $expect: (
+      margin-top: null,
+      padding-top: null,
+      margin-right: -15%,
+      padding-right: 15%,
+      margin-bottom: -1em,
+      padding-bottom: 1em,
+      margin-left: -15%,
+      padding-left: 15%,
+    );
+    @include assert-equal($test, $expect,
+      'get-bleed handles 0, span, and length arguments.');
+
+    // inside
+    $test: get-bleed(0 1 10% of 8 .25 inside);
+    $expect: (
+      margin-top: null,
+      padding-top: null,
+      margin-right: -12.5%,
+      padding-right: 13.75%,
+      margin-bottom: -10%,
+      padding-bottom: 10%,
+      margin-left: -12.5%,
+      padding-left: 13.75%,
+    );
+    @include assert-equal($test, $expect,
+      'get-bleed handles inside gutters.');
+
+    // no-gutters inside
+    $test: get-bleed(0 3em no-gutters inside);
+    $expect: (
+      margin-top: null,
+      padding-top: null,
+      margin-right: -3em,
+      padding-right: 3em,
+      margin-bottom: null,
+      padding-bottom: null,
+      margin-left: -3em,
+      padding-left: 3em,
+    );
+    @include assert-equal($test, $expect,
+      'get-bleed can handle no-gutters inside.');
   }
 }
